--- a/100_Numpy_exercises.ipynb
+++ b/100_Numpy_exercises.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "63ebbf77",
    "metadata": {},
    "outputs": [],
@@ -53,11 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c39a5917",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -69,11 +71,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "d4160594",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.1.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.__version__)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,11 +97,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "9b383fcc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=np.zeros(10)\n",
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,11 +127,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "7f7c6497",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Memory: 40B\n"
+     ]
+    }
+   ],
+   "source": [
+    "b=np.array([1, 2, 3, 4.23, 5])\n",
+    "print(f\"Total Memory: {b.size * b.itemsize}B\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,11 +154,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "9b19b55d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "add(x1, x2, /, out=None, *, where=True, casting='same_kind', order='K', dtype=None, subok=True[, signature])\n",
+      "\n",
+      "Add arguments element-wise.\n",
+      "\n",
+      "Parameters\n",
+      "----------\n",
+      "x1, x2 : array_like\n",
+      "    The arrays to be added.\n",
+      "    If ``x1.shape != x2.shape``, they must be broadcastable to a common\n",
+      "    shape (which becomes the shape of the output).\n",
+      "out : ndarray, None, or tuple of ndarray and None, optional\n",
+      "    A location into which the result is stored. If provided, it must have\n",
+      "    a shape that the inputs broadcast to. If not provided or None,\n",
+      "    a freshly-allocated array is returned. A tuple (possible only as a\n",
+      "    keyword argument) must have length equal to the number of outputs.\n",
+      "where : array_like, optional\n",
+      "    This condition is broadcast over the input. At locations where the\n",
+      "    condition is True, the `out` array will be set to the ufunc result.\n",
+      "    Elsewhere, the `out` array will retain its original value.\n",
+      "    Note that if an uninitialized `out` array is created via the default\n",
+      "    ``out=None``, locations within it where the condition is False will\n",
+      "    remain uninitialized.\n",
+      "**kwargs\n",
+      "    For other keyword-only arguments, see the\n",
+      "    :ref:`ufunc docs <ufuncs.kwargs>`.\n",
+      "\n",
+      "Returns\n",
+      "-------\n",
+      "add : ndarray or scalar\n",
+      "    The sum of `x1` and `x2`, element-wise.\n",
+      "    This is a scalar if both `x1` and `x2` are scalars.\n",
+      "\n",
+      "Notes\n",
+      "-----\n",
+      "Equivalent to `x1` + `x2` in terms of array broadcasting.\n",
+      "\n",
+      "Examples\n",
+      "--------\n",
+      ">>> import numpy as np\n",
+      ">>> np.add(1.0, 4.0)\n",
+      "5.0\n",
+      ">>> x1 = np.arange(9.0).reshape((3, 3))\n",
+      ">>> x2 = np.arange(3.0)\n",
+      ">>> np.add(x1, x2)\n",
+      "array([[  0.,   2.,   4.],\n",
+      "       [  3.,   5.,   7.],\n",
+      "       [  6.,   8.,  10.]])\n",
+      "\n",
+      "The ``+`` operator can be used as a shorthand for ``np.add`` on ndarrays.\n",
+      "\n",
+      ">>> x1 = np.arange(9.0).reshape((3, 3))\n",
+      ">>> x2 = np.arange(3.0)\n",
+      ">>> x1 + x2\n",
+      "array([[ 0.,  2.,  4.],\n",
+      "       [ 3.,  5.,  7.],\n",
+      "       [ 6.,  8., 10.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.info(np.add)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,11 +235,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "032ba316",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 1., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c=np.zeros(10)\n",
+    "c[4]=1\n",
+    "c"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,11 +266,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "2f1ae242",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26,\n",
+       "       27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43,\n",
+       "       44, 45, 46, 47, 48, 49])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d=np.arange(10,50)\n",
+    "d"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -165,11 +298,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "5a07c5c1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([49, 48, 47, 46, 45, 44, 43, 42, 41, 40, 39, 38, 37, 36, 35, 34, 33,\n",
+       "       32, 31, 30, 29, 28, 27, 26, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16,\n",
+       "       15, 14, 13, 12, 11, 10])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e=d[::-1].copy()\n",
+    "e"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -181,11 +330,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "b4702eb8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2],\n",
+       "       [3, 4, 5],\n",
+       "       [6, 7, 8]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(9).reshape(3,3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -197,11 +361,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "ead69303",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 4]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f=np.array([1,2,0,0,4,0])\n",
+    "[idx for idx in range(f.size) if f[idx]]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -213,11 +391,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "e7f9417c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.eye(3,3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -229,11 +422,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "ec3c59bb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.65755708, 0.52248451, 0.51945809],\n",
+       "        [0.05819541, 0.14661693, 0.84279338],\n",
+       "        [0.57821079, 0.41777747, 0.64866871]],\n",
+       "\n",
+       "       [[0.68568598, 0.76505056, 0.72916198],\n",
+       "        [0.55496771, 0.05836469, 0.41029073],\n",
+       "        [0.09724074, 0.46134099, 0.30512256]],\n",
+       "\n",
+       "       [[0.19680638, 0.1705823 , 0.65632461],\n",
+       "        [0.86231344, 0.12877685, 0.84994468],\n",
+       "        [0.724217  , 0.54561423, 0.20457267]]])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.rand(3,3,3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -245,11 +461,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "8247cae0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.54330157 0.87978552 0.89662579 0.64576863 0.24329744 0.90811645\n",
+      "  0.67832293 0.11663342 0.98931653 0.75570113]\n",
+      " [0.06382662 0.05300519 0.36009613 0.15346441 0.54927297 0.31615237\n",
+      "  0.10311747 0.98543609 0.75345737 0.36140956]\n",
+      " [0.75503144 0.87929969 0.94294459 0.67300501 0.32206998 0.18738509\n",
+      "  0.85628912 0.73880582 0.71065646 0.72757017]\n",
+      " [0.35862973 0.15315814 0.0684816  0.11117948 0.49513579 0.47214485\n",
+      "  0.41162999 0.98882068 0.08350619 0.94959156]\n",
+      " [0.98971553 0.7042686  0.35815204 0.26172815 0.18833842 0.18432023\n",
+      "  0.22384129 0.24219996 0.41100288 0.89753716]\n",
+      " [0.69378095 0.50636382 0.98545335 0.75614702 0.71675313 0.71581984\n",
+      "  0.04288861 0.70631    0.21563063 0.01514929]\n",
+      " [0.05019187 0.3067279  0.43516861 0.9310988  0.28103567 0.6581726\n",
+      "  0.236945   0.25956546 0.80408732 0.86252793]\n",
+      " [0.53698202 0.53398028 0.35324358 0.06215637 0.11684876 0.54535807\n",
+      "  0.5719045  0.32579141 0.66607762 0.00827369]\n",
+      " [0.30379404 0.11307176 0.29209236 0.80365816 0.45945494 0.03522331\n",
+      "  0.61148592 0.50595784 0.72472909 0.94012862]\n",
+      " [0.96672958 0.2150534  0.88700475 0.10670041 0.47460571 0.61719888\n",
+      "  0.61476821 0.49778356 0.49721549 0.91981285]]\n",
+      "0.9897155265404249\n",
+      "0.008273687423120069\n"
+     ]
+    }
+   ],
+   "source": [
+    "g=np.random.rand(10,10)\n",
+    "print(g)\n",
+    "print(g.max())\n",
+    "print(g.min())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -261,11 +511,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "1d5c77fd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.5114938101729113)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h=np.random.rand(30)\n",
+    "h.mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -317,11 +581,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "d5f154f3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.nan == np.nannp.nan == np.nan"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1680,7 +1957,25 @@
    "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
