--- a/100_Numpy_exercises.ipynb
+++ b/100_Numpy_exercises.ipynb
@@ -541,11 +541,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "140eff80",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 1., 1., 1., 1., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 1., 1., 1., 1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=np.zeros((8,8))\n",
+    "\n",
+    "# fancy indexing\n",
+    "a[:,[0,-1]]=1\n",
+    "a[[0,-1], :]=1\n",
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -557,11 +582,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "ab1d50a8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  0  0  0  0  0  0  0]\n",
+      " [ 0  1  2  3  4  5  6  0]\n",
+      " [ 0  7  8  9 10 11 12  0]\n",
+      " [ 0 13 14 15 16 17 18  0]\n",
+      " [ 0 19 20 21 22 23 24  0]\n",
+      " [ 0 25 26 27 28 29 30  0]\n",
+      " [ 0 31 32 33 34 35 36  0]\n",
+      " [ 0  0  0  0  0  0  0  0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Z=np.arange(1,37).reshape((6,6))\n",
+    "Z = np.pad(Z, pad_width=1, mode='constant', constant_values=0)\n",
+    "print(Z)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -581,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 97,
    "id": "d5f154f3",
    "metadata": {},
    "outputs": [
@@ -591,13 +635,18 @@
        "False"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.nan == np.nannp.nan == np.nan"
+    "np.nan\n",
+    "False\n",
+    "False\n",
+    "np.nan\n",
+    "True\n",
+    "False"
    ]
   },
   {
@@ -610,11 +659,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "id": "fc9309c9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [0, 2, 0, 0, 0],\n",
+       "       [0, 0, 3, 0, 0],\n",
+       "       [0, 0, 0, 4, 0]])"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.diag(np.arange(1,5), k=-1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -626,11 +692,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "id": "ceccc277",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1.]])"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h=np.zeros((8,8))\n",
+    "h[::2, ::2]=1\n",
+    "h[1::2, 1::2]=1\n",
+    "h"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -642,11 +731,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "id": "ebf6fa3c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.int64(1), np.int64(5), np.int64(3))"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unravel_index(99, (6,7,8))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -658,11 +760,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "id": "7cbd262a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0]])"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.tile(np.array([[0,1], [1,0]]), (4,4))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -674,11 +796,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "id": "96ec3796",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mat=np.arange(1,26).reshape(5,5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -690,11 +814,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "id": "06231cc7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "color = np.dtype([(\"r\", np.ubyte),\n",
+    "                  (\"g\", np.ubyte),\n",
+    "                  (\"b\", np.ubyte),\n",
+    "                  (\"a\", np.ubyte)])\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -706,11 +835,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "id": "25c78847",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3., 3.],\n",
+       "       [3., 3.],\n",
+       "       [3., 3.],\n",
+       "       [3., 3.],\n",
+       "       [3., 3.]])"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.matmul(np.ones((5,3)), np.ones((3,2)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -722,11 +868,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "85a57a73",
+   "execution_count": 165,
+   "id": "6fa8ca46-6e24-464f-9b4b-4ef7771d3043",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ -6,  -6,  -3,   0,  -2,   8,  -5,  -7,  -1,  -7,  -5,   1,  -2,\n",
+       "        -9,   1,   3,  -6,   2,  -4,  -6, -10,   1,   8,  -6,  -6,   2,\n",
+       "        -4,   0,  -5,  -7,  -6,  -7,  -2,  -4,  -7,  -1,   8,   9,  -2,\n",
+       "        -8,  -6,  -5, -10,  -6,  -6,  -3,   1,  -3,  -1,  -5,   3,  -3,\n",
+       "        -5,   2,  -3,   0,   9,  -9,  -6,   2,  -5,  -2,   3,  -9,  -7,\n",
+       "        -7,   8,  -6,  -9,  -9,  -7,  -9, -10,   9,   1,  -9,   0,  -3,\n",
+       "         8,  -6,   9,   0,  -9,   2,   2,  -6,   9,  -8,  -8,  -7,   2,\n",
+       "        -4,   2,  -2,  -7,  -6,  -5,  -1,  -9,  -9], dtype=int32)"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr=np.random.randint(-10, 10, size=100)\n",
+    "np.where((arr>3) & (arr<8), -arr, arr)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -745,11 +912,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "id": "5094a699",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "9\n",
+    "10"
+   ]
   },
   {
    "cell_type": "markdown",
