--- a/100_Numpy_exercises.ipynb
+++ b/100_Numpy_exercises.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "c39a5917",
    "metadata": {},
    "outputs": [],
@@ -950,11 +950,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a4195583",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nZ**Z\\n2 << Z >> 2\\nZ <- Z\\n1j*Z\\nZ/1/1\\n'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Z**Z\n",
+    "2 << Z >> 2\n",
+    "Z <- Z\n",
+    "1j*Z\n",
+    "Z/1/1\n",
+    "\"\"\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -971,11 +990,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "277bd109",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nnp.nan\\nnp.nan\\nnp.array([np.nan]).astype(int).astype(float)\\n'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "np.nan\n",
+    "np.nan\n",
+    "np.array([np.nan]).astype(int).astype(float)\n",
+    "\"\"\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -987,11 +1023,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "63df40b7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ -4.,  -5.,  -9.,  -9.,   1.,  -9.,   5., -10.,   7.,  -9.])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Z = np.random.uniform(-10,+10,10)\n",
+    "np.copysign(np.ceil(np.abs(Z)), Z)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1006,8 +1056,23 @@
    "execution_count": null,
    "id": "e4e221c3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-2,  4,  6])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1=np.array([1,4,4,6,9,-2])\n",
+    "arr2=np.array([11,3,4,6,19,-2])\n",
+    "np.intersect1d(arr1,arr2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2140,7 +2205,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
