solved more questions

--- a/100_Numpy_exercises.ipynb
+++ b/100_Numpy_exercises.ipynb
@@ -1085,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97517a73",
+   "id": "28bb9a43",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1104,10 +1104,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c05aab40",
+   "id": "41ef7db3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"No\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1119,11 +1121,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "6156213d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-06-01\n",
+      "2025-05-31\n",
+      "2025-06-02\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "today=np.datetime64(\"today\")\n",
+    "yesterday=today-np.timedelta64(1)\n",
+    "tomorrow=today+np.timedelta64(1)\n",
+    "\n",
+    "print(today)\n",
+    "print(yesterday)\n",
+    "print(tomorrow)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1135,11 +1157,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "249806a3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['2016-07-01', '2016-07-02', '2016-07-03', '2016-07-04',\n",
+       "       '2016-07-05', '2016-07-06', '2016-07-07', '2016-07-08',\n",
+       "       '2016-07-09', '2016-07-10', '2016-07-11', '2016-07-12',\n",
+       "       '2016-07-13', '2016-07-14', '2016-07-15', '2016-07-16',\n",
+       "       '2016-07-17', '2016-07-18', '2016-07-19', '2016-07-20',\n",
+       "       '2016-07-21', '2016-07-22', '2016-07-23', '2016-07-24',\n",
+       "       '2016-07-25', '2016-07-26', '2016-07-27', '2016-07-28',\n",
+       "       '2016-07-29', '2016-07-30', '2016-07-31'], dtype='datetime64[D]')"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(\"2016-07\",\"2016-08\", dtype=\"datetime64[D]\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1151,11 +1193,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "d9bee25c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0,  -8, -10, -24])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=np.arange(1,5)\n",
+    "b=np.arange(5,9)\n",
+    "\n",
+    "np.add(a,b,out=b)\n",
+    "np.multiply(a, -0.5, out=a, casting=\"unsafe\")\n",
+    "np.multiply(a,b,out=b)\n",
+    "b"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1167,11 +1228,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "46a4ab0a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8.47660308 9.98566089 5.39704347 7.46553634 9.70357802 7.36796148\n",
+      " 5.627367   1.85746679 8.61489425 9.84553235]\n",
+      "[8. 9. 5. 7. 9. 7. 5. 1. 8. 9.]\n",
+      "[8 9 5 7 9 7 5 1 8 9]\n",
+      "[8. 9. 5. 7. 9. 7. 5. 1. 8. 9.]\n",
+      "[8. 9. 5. 7. 9. 7. 5. 1. 8. 9.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr=np.random.uniform(1, 10, size=10)\n",
+    "print(arr)\n",
+    "\n",
+    "# method1 (Floor)\n",
+    "print(np.floor(arr))\n",
+    "\n",
+    "# method2 (Casting to int)\n",
+    "print(arr.astype(np.int32))\n",
+    "\n",
+    "# method3 (Floor division with 1)\n",
+    "print(arr//1)\n",
+    "\n",
+    "# method4 (numpy trunc func)\n",
+    "print(np.trunc(arr))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1183,11 +1272,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "id": "8a08a042",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2 3 4]\n",
+      " [0 1 2 3 4]\n",
+      " [0 1 2 3 4]\n",
+      " [0 1 2 3 4]\n",
+      " [0 1 2 3 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.matrix([np.arange(5)]*5)\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1199,11 +1303,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "id": "7c2acc82",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 1., 2., 3., 4., 5., 6., 7., 8., 9.])"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def generate():\n",
+    "    for i in range(10):\n",
+    "        yield i\n",
+    "\n",
+    "np.fromiter(generate(), dtype=float,count=-1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1215,11 +1336,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "id": "ef7bc11c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.09090909, 0.18181818, 0.27272727, 0.36363636, 0.45454545,\n",
+       "       0.54545455, 0.63636364, 0.72727273, 0.81818182, 0.90909091])"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linspace(0,1,12)[1:-1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1231,11 +1366,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "id": "0b5a407d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([160.3920445 , 197.20834554, 323.87434632, 506.19749731,\n",
+       "       610.23676986, 721.5705599 , 765.81924827, 834.37280212,\n",
+       "       882.17498577, 997.08538006])"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sort(np.random.uniform(1,1000,10))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1247,11 +1397,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "id": "70917f47",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 0 ns\n",
+      "Wall time: 21.9 μs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(37)"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr=np.array([3,6,9,3,1,5,10])\n",
+    "\n",
+    "%time sum(arr)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1263,11 +1436,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "id": "c4ae0c00",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.random.randint(0,2,5)\n",
+    "B = np.random.randint(0,2,5)\n",
+    "\n",
+    "np.allclose(A,B)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1279,11 +1468,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "id": "5a2cf158",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "arr=np.arange(1,5)\n",
+    "arr.flags.writeable=False\n"
+   ]
   },
   {
    "cell_type": "markdown",
